# local-llm-ref-verifier

./: .gitignore  CHANGELOG.md  README.md  WINDOWS_SETUP.txt  pyproject.toml
.claude/: CLAUDE.md
src/ref_verifier/: __init__.py  __main__.py  auditor.py  cli.py  gui.py  models.py  ollama_client.py  pdf_parser.py  prompts.py  reference_extractor.py  verifier.py
src/ref_verifier/parsers/: __init__.py  apa.py  base.py  chicago.py  detector.py  harvard.py  ieee.py  vancouver.py
src/ref_verifier/sources/: crossref.py  google_scholar.py  semantic_scholar.py
tests/: test_parsers.py  test_pdf_parser.py  test_real_papers.py  test_verifier.py
tests/fixtures/: sample_references.json
tests/fixtures/expected/apa/: frontiers_discrimination_anxiety.json  frontiers_discrimination_anxiety_fake.json  frontiers_scholarly_reading.json  frontiers_scholarly_reading_fake.json
tests/fixtures/expected/chicago/: mdpi_humanities_hui_identity.json  mdpi_humanities_hui_identity_fake.json  mdpi_humanities_toy_tourism.json  mdpi_humanities_toy_tourism_fake.json  nber_labor_force.json  nber_labor_force_fake.json
tests/fixtures/expected/harvard/: rba_financial_conditions.json  rba_financial_conditions_fake.json  rba_monetary_policy.json  rba_monetary_policy_fake.json
tests/fixtures/expected/ieee/: attention_is_all_you_need.json  attention_is_all_you_need_fake.json  deep_residual_learning.json  deep_residual_learning_fake.json  yolo.json  yolo_fake.json
tests/fixtures/expected/vancouver/: covid_bibliometric.json  covid_bibliometric_fake.json  covid_cardiovascular.json  (+3 more)
