[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-ref-verifier"
version = "0.1.0"
description = "Privacy-preserving citation verification for unpublished research manuscripts"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pdfplumber>=0.10",
    "PyMuPDF>=1.23",
    "ollama>=0.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "scholarly>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
ref-verifier = "ref_verifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
